--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
             <source src="video.mp4" type="video/mp4">
         </video>
         <div class="nav-bar">
-        <button class="home-btn theme"><img  src="svg/brightness-high.svg" height="25" width="25" style="fill: white;" alt=""></button>
-        <button class="home-btn menu"><a class="project_link" href="projects.html"><img src="svg/list.svg" height="25" width="25" alt=""></a></button>
+        <button class="home-btn theme"><img  src="brightness-high.svg" height="25" width="25" style="fill: white;" alt=""></button>
+        <button class="home-btn menu"><a class="project_link" href="projects.html"><img src="list.svg" height="25" width="25" alt=""></a></button>
         </div>
         <h1 class="head display-5 fw-bol ">HEY, I’M <span class="name fw-bold">KUNAL JANGID</span> <br>I’M A WEB DEVELOPER</h1>
         <div class="col-lg-6 mx-auto">
@@ -32,8 +32,8 @@
             My journey in web development started 1 years ago, and since then, I've been honing my skills in HTML, CSS, JavaScript, and various modern frameworks. I enjoy tackling complex problems and turning ideas into reality through code.
             </p>
           <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-            <button type="button" class="home-btn btn btn btn-lg px-4 gap-3"><img src="svg/chevron-right.svg" alt=""><a class="project_link" href="projects.html">see my projects</a></button>
-            <button type="button" class="home-btn btn btn-outline btn-lg px-4"><img src="svg/chevron-right.svg" alt=""><a class="project_link" href="about.html">more about me</a></button>
+            <button type="button" class="home-btn btn btn btn-lg px-4 gap-3"><img src="chevron-right.svg" alt=""><a class="project_link" href="projects.html">see my projects</a></button>
+            <button type="button" class="home-btn btn btn-outline btn-lg px-4"><img src="chevron-right.svg" alt=""><a class="project_link" href="about.html">more about me</a></button>
           </div>
         </div>
       </div>
