--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
                 My journey in web development started 1 year ago, and since then, I've been honing my skills in HTML, CSS, JavaScript, and various modern frameworks. I enjoy tackling complex problems and turning ideas into reality through code.
             </p>
             <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-                <button type="button" class="home-btn btn btn btn-lg px-4 gap-3">
+                <button type="button" class="home-btn btn btn btn-lg px-4 gap-2">
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#000" class="bi bi-chevron-right" viewBox="0 0 16 16">
                         <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708"/>
                     </svg>
                     <a class="project_link" href="projects.html">see my projects</a>
                 </button>
-                <button type="button" class="home-btn btn btn-outline btn-lg px-4">
+                <button type="button" class="home-btn btn btn-outline btn-lg px-4 gap-2">
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#000" class="bi bi-chevron-right" viewBox="0 0 16 16">
                         <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708"/>
                     </svg>
